welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:2: error: not found: value ab
	if (ab==10 || ac==10 || bc==10 ) {
            ^blueTicket:8: error: not found: value ab
	if ( ab== 10 * ac || ab== 10 * bc ) {
             ^